[gd_scene load_steps=6 format=3 uid="uid://b0qnb15obtmeo"]

[ext_resource type="Script" path="res://scenes/ui/keyboard_bindings.gd" id="1_rx6y7"]
[ext_resource type="Theme" uid="uid://gydw4cyvjjug" path="res://scenes/ui/title_theme.tres" id="2_lk4rw"]
[ext_resource type="Theme" uid="uid://bxfruse1idhj0" path="res://scenes/ui/controls_theme.tres" id="3_177fn"]
[ext_resource type="FontFile" uid="uid://kvrcig0ggl1f" path="res://fonts/a-space/A-Space Bold Demo.otf" id="4_xwb70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_abufw"]

[node name="KeyboardBindings" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 10
script = ExtResource("1_rx6y7")

[node name="controls" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_lk4rw")

[node name="Label" type="Label" parent="controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="controls"]
visible = false
layout_mode = 2
theme_override_constants/separation = 23
theme_override_styles/separator = SubResource("StyleBoxEmpty_abufw")

[node name="keyboard_bindings" type="MarginContainer" parent="controls"]
layout_mode = 2
size_flags_vertical = 3

[node name="inputs" type="GridContainer" parent="controls/keyboard_bindings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_177fn")
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="hdr_descr" type="Label" parent="controls/keyboard_bindings/inputs"]
layout_mode = 2
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_fonts/font = ExtResource("4_xwb70")
text = "Action"
horizontal_alignment = 2

[node name="hdr_key_0" type="Label" parent="controls/keyboard_bindings/inputs"]
layout_mode = 2
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_fonts/font = ExtResource("4_xwb70")
text = "Key"
horizontal_alignment = 1

[node name="hdr_key_1" type="Label" parent="controls/keyboard_bindings/inputs"]
layout_mode = 2
theme_override_colors/font_color = Color(0.982343, 0.982342, 0.982342, 1)
theme_override_fonts/font = ExtResource("4_xwb70")
text = "2nd"
horizontal_alignment = 1

[node name="ign_HSeparator2" type="HSeparator" parent="controls/keyboard_bindings/inputs"]
layout_mode = 2

[node name="ign_HSeparator3" type="HSeparator" parent="controls/keyboard_bindings/inputs"]
custom_minimum_size = Vector2(440, 0)
layout_mode = 2

[node name="ign_HSeparator4" type="HSeparator" parent="controls/keyboard_bindings/inputs"]
custom_minimum_size = Vector2(440, 0)
layout_mode = 2

[node name="template_action" type="Label" parent="controls/keyboard_bindings/inputs"]
visible = false
layout_mode = 2
text = "some action"
horizontal_alignment = 2

[node name="template_keyboard" type="Button" parent="controls/keyboard_bindings/inputs"]
visible = false
layout_mode = 2
text = "A"

[node name="HSeparator2" type="HSeparator" parent="controls"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_abufw")

[node name="HBoxContainer" type="HBoxContainer" parent="controls"]
layout_mode = 2

[node name="btn_reset" type="Button" parent="controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 100
text = "Reset"

[node name="btn_back" type="Button" parent="controls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 100
text = "Back"

[connection signal="pressed" from="controls/HBoxContainer/btn_reset" to="." method="_on_btn_reset_pressed"]
[connection signal="pressed" from="controls/HBoxContainer/btn_back" to="." method="_on_btn_back_pressed"]
